# robot-finds-ice-cream

./: CMakeLists.txt  README.md  main.cpp  make.vim
Data/Robot Finds Ice Cream/: Credits.txt  Map0.lvl  Map1.lvl  Map10.lvl  Map2.lvl  Map3.lvl  Map4.lvl  Map5.lvl  Map6.lvl  Map7.lvl  Map8.lvl  Map9.lvl  Player.vec  PlayerLeg.vec  Robot.vec  VendingMachine.vec  VisitedMachine.vec
Data/Robot Finds Ice Cream/materials/: Opaque.mat  White.mat
Games/RobotPal/: RP_Fader.cpp  RP_Fader.h  RP_Game.cpp  RP_Game.h  RP_Map.cpp  RP_Map.h  RP_Player.cpp  RP_Player.h  RP_Robot.cpp  RP_Robot.h  RP_VendingMachine.cpp  RP_VendingMachine.h
Games/RobotPal/Modes/: RP_ModeCredits.cpp  RP_ModeCredits.h  RP_ModeInGame.cpp  RP_ModeInGame.h
osx/: SDLMain.m
